# seu-iam

./: .env.example  Dockerfile  conftest.py  entrypoint.sh  manage.py  pyproject.toml
apps/common/: authentication.py  exceptions.py  pagination.py  permissions.py
apps/common/api/: exceptions.py
apps/users/: apps.py  models.py
apps/users/application/: tasks.py
apps/users/application/use_cases/: admin_user_management.py  announcements.py  change_password.py  confirm_password_reset.py  delete_account.py  disable_mfa.py  enable_email_mfa.py  enable_mfa.py  enable_sms_mfa.py  feature_flags.py  gdpr_erasure.py  gdpr_export.py  github_social_auth.py  google_social_auth.py  login.py  logout.py  mfa_challenge.py  profile.py  reactivate_account.py  regenerate_backup_codes.py  register.py  request_password_reset.py  resend_verification_otp.py  setup_email_mfa.py  setup_mfa.py  setup_sms_mfa.py  verify_email.py  verify_password_reset_otp.py
apps/users/domain/: audit.py  entities.py  exceptions.py  repositories.py
apps/users/infrastructure/: admin.py  announcement_models.py  announcement_repository.py  audit_models.py  audit_repository.py  audit_service.py  backup_code_models.py  backup_code_service.py  event_publisher.py  feature_flag_models.py  feature_flag_repository.py  github_verifier.py  google_verifier.py  models.py  org_role_client.py  otp_service.py  password_history_models.py  password_history_service.py  repositories.py  session_models.py  session_service.py  token_service.py  totp_service.py
apps/users/management/commands/: consume_events.py  seed_superadmin.py
apps/users/migrations/: 0000_create_iam_schema.py  0001_initial.py  0002_add_mfa_secret.py  0003_add_audit_log.py  0004_add_user_session.py  0005_add_password_history.py  0006_add_mfa_backup_codes.py  0007_add_phone_bio_to_user.py  0008_add_feature_flags.py  0009_add_announcements.py  0010_add_user_mfa_type.py  0011_add_scheduled_deletion_at.py
apps/users/presentation/: backup_code_views.py  compliance_views.py  serializers.py  urls.py  views.py
apps/users/tests/integration/: test_announcement_models.py  test_announcement_repository.py  test_feature_flag_models.py  test_feature_flag_repository.py  test_mfa_type_migration.py
apps/users/tests/unit/: fakes.py  test_admin_user_management.py  test_announcements.py  test_cache_invalidation.py  test_change_password.py  test_confirm_password_reset.py  test_delete_account.py  test_disable_mfa.py  (+31 more)
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
