[project]
name = "iam-service"
version = "0.1.0"
description = "Identity and Access Management service for the Sansaar platform."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "psycopg2-binary",
    "django-cors-headers",
    "python-decouple",
    "gunicorn",
    "redis",
    "cryptography>=42.0.0",
    "pika",
    "drf-spectacular",
    "pyotp",
    "qrcode",
    "google-auth>=2.53.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.4",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 140
target-version = "py313"
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.django-stubs]
django_settings_module = "config.settings.development"

[[tool.mypy.overrides]]
module = [
    "apps.users.infrastructure.*",
    "apps.users.application.*",
    "apps.users.presentation.views",
    "apps.users.presentation.compliance_views",
    "apps.users.presentation.backup_code_views",
    "apps.common.*",
    "apps.users.tests.unit.test_superadmin_ip_whitelist",
]
ignore_errors = true
