[project]
name = "iam-service"
version = "0.1.0"
description = "Identity and Access Management service for the Sansaar platform."
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.15",
    "djangorestframework-simplejwt>=5.3",
    "psycopg2-binary",
    "django-cors-headers",
    "python-decouple",
    "gunicorn",
    "redis",
    "pika",
    "drf-spectacular",
    "pyotp",
    "qrcode",
    "google-auth>=2.53.0",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.development"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 140
target-version = "py313"
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
